--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_auth: ^3.3.6
   cloud_firestore: ^3.1.7
   flutter_bloc: ^8.0.1
+  meta: ^1.7.0
+  equatable: ^2.0.0
 
 dev_dependencies:
   flutter_test:
